# cpp_calculator

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  requirements.txt  sonar-project.properties
docker/: Dockerfile
docs/: TestResults.xml
python_scripts/: deploy.py  run_tests.py
src/: calculator.cpp  main  main.cpp
tests/: test_calculator  test_calculator.cpp  test_calculator_gtest.cpp
